--- a/src/RouteLocalization.AspNetCore/RouteLocalization.AspNetCore.csproj
+++ b/src/RouteLocalization.AspNetCore/RouteLocalization.AspNetCore.csproj
@@ -2,6 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <Version>1.0.0-alpha1</Version>
+    <Product>RouteLocalization ASP.NET Core</Product>
+    <PackageProjectUrl>https://github.com/Dresel/RouteLocalization</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Dresel/RouteLocalization</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <Authors>Christopher Dresel</Authors>
+    <Description>An ASP.NET Core MVC package that simplifies route localization of attribute routes.</Description>
+    <PackageTags>aspnetcore, mvc, route, localization</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
