--- a/test/RouteLocalization.AspNetCore.Test/RouteLocalization.AspNetCore.Test.csproj
+++ b/test/RouteLocalization.AspNetCore.Test/RouteLocalization.AspNetCore.Test.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Appveyor.TestLogger" Version="1.0.2-pre-rtm" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.1.17" />
     <PackageReference Include="MSTest.TestFramework" Version="1.1.17" />
